# Elementary-MC-model

./: LICENSE  README.md
PythonCode/CurrentCode/: F001_Preparation_v1.ipynb  F002_Analyze_v1.ipynb  F003_RecalcSteps_v1.ipynb  F005_01_Preparation.ipynb  F005_02_StepsRecalculation.ipynb  F005_03_Visualization_001.ipynb  F005_03_Visualization_002.ipynb  F005_04_Analyzing_001.ipynb  F005_04_Analyzing_002_0.ipynb  F005_04_Analyzing_002_1.ipynb  F005_05_Analyzing_001_0.ipynb  F005_05_Analyzing_001_1.ipynb  InitSettings.ini  WorkCfg.ini  WorkCombs.txt  WorkPool_v7.py  WorkTemplate.txt  _TestTemplate.txt  utils.py  utils_002.py
PythonCode/CurrentCode/RES/Fig8/: code.ipynb
PythonCode/CurrentCode/RES/Figs9-10/: code.ipynb
PythonCode/CurrentCode/_Tests/: tests.ipynb
RustCode/model_1_001/: Cargo.toml
RustCode/model_1_001/src/: InitSettings.ini  main.rs
RustCode/model_1_001/src/mods/: constants.rs  io_handler.rs  lattice.rs  mod.rs  settings.rs  simulation.rs
RustCode/model_1_002/: Cargo.toml
RustCode/model_1_002/src/: InitSettings.ini  main.rs
RustCode/model_1_002/src/mods/: constants.rs  ensemble.rs  frontier.rs  io_handler.rs  item.rs  lattice.rs  mod.rs  paths.rs  settings.rs  simulation.rs  state.rs  utils.rs
